--- a/Frontend/farmer.html
+++ b/Frontend/farmer.html
@@ -26,15 +26,17 @@
       <!-- Add Listing Form -->
       <form id="listingForm" class="listing-form">
         <input type="text" id="cropName" placeholder="Crop Name (e.g. Tomatoes)" required>
-        <input type="number" id="cropQuantity" placeholder="Quantityrelax
+        <input type="number" id="cropQuantity" placeholder="Quantity (kg)" min="1" required>
         <input type="number" id="price" placeholder="Price (e.g., 10.50)" step="0.01" min="0">
         <input type="date" id="availableDate" required>
+        
         <select id="listingType" required>
           <option value="sell">Sell (Fair Price)</option>
           <option value="barter">Barter</option>
           <option value="donate">Donate</option>
         </select>
-        <button type="submit" class="btn">Add Listing</button>
+        
+        <button type="submit" class="btn">➕ Add Listing</button>
       </form>
 
       <!-- Listings Display -->
@@ -46,7 +48,7 @@
   </section>
 
   <script>
-  const role = "farmer"; // 👩‍🌾 only farmers allowed
+    const role = "farmer"; // 👩‍🌾 only farmers allowed
   </script>
   <script src="dashboard.js"></script>
 </body>
